# advent_of_code

./: README.md
2024/: README.md
2025/: Cargo.toml  README.md  template.txt
2025/.cargo/: config.toml
2025/cli/: Cargo.toml
2025/cli/src/: main.rs
2025/cli/src/cli/: download.rs  mod.rs  scaffold.rs  solve.rs  util.rs
2025/src/: lib.rs
2025/src/common/: file.rs  mod.rs
2025/src/common/util/: grid.rs  mod.rs  point.rs  unionfind.rs
2025/src/contrib/: download.rs  scaffold.rs
